@@ -412,6 +412,14 @@
     <dd>This nested typdef was originally not specified.
     </dd>
 
+    <dt><a href="lwg-active.html#253">253</a>:
+        <em>valarray helper functions are almost entirely useless</em>
+    </dt>
+    <dd>Make the copy constructor and copy-assignment operator declarations
+        public in gslice_array, indirect_array, mask_array, slice_array; provide
+	definitions.
+    </dd>
+
     <dt><a href="lwg-defects.html#265">265</a>:
         <em>std::pair::pair() effects overly restrictive</em>
     </dt>
